--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-clean": "^0.3.1",
-    "gulp-coffee": "^2.3.1",
     "gulp-coffee-react": "^1.0.0",
     "gulp-combine-media-queries": "^0.2.0",
     "gulp-cssbeautify": "^0.1.3",
@@ -23,14 +22,12 @@
     "gulp-csso": "^1.0.0",
     "gulp-html-prettify": "0.0.1",
     "gulp-jade": "^1.1.0",
-    "gulp-requirejs": "^0.1.3",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.2.0",
-    "react": "^0.13.3",
-    "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
-    "jquery": "^2.1.4"
+    "react": "^0.13.3",
+    "underscore": "^1.8.3"
   }
 }
